--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ SOP_ID=4054
 SOP_TYPE_ID=1544
 DOC_ID="WP300000W"
 DOC_TITLE="WP300000 Worksheet"
-DOC_DETAILS=""
+DOC_DETAILS="https://github.com/Johnson-Gage-Inspection-Inc/xl-WP300000-Worksheet"
